# pagemaker

./: .editorconfig  .env.example  .gitignore  CABINET_FIXES_SUMMARY.md  CABINET_PERFORMANCE_OPTIMIZATION.md  CONTRIBUTING.md  DASHBOARD_OPTIMIZATION.md  DEPLOYMENT_FIX.md  README.md  TEST_DEPLOYMENT.md  VERCEL_DEPLOYMENT_FIX.md  debug-login-issue.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-results-story-1.1.md  test-translation.js  v0-prompt-iphone-preview.md  v0-prompt-pagemaker-preview.md  vercel.json
apps/backend/: .coveragerc  .env.example  .flake8  .gitignore  DATA_ISOLATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SECURITY.md  TEST_SUMMARY.md  USER_CREATION_GUIDE.md  manage.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_coverage.py  test_jwt.py
apps/backend/api/: dashboard_views.py  tests.py  urls.py  views.py
apps/backend/auth/: __init__.py  serializers.py  urls.py  views.py
apps/backend/configurations/: admin.py  models.py  serializers.py  urls.py  views.py
apps/backend/media/: apps.py  models.py  test_upload.py  tests.py  urls.py  validators.py  views.py
apps/backend/pagemaker/: asgi.py  config.py  schemas.py  settings.py  test_settings.py  urls.py  validators.py  wsgi.py
apps/backend/pages/: activity_logger.py  apps.py  models.py  permissions.py  repositories.py  serializers.py  tests.py  urls.py  views.py
apps/backend/scripts/: deploy_data_isolation.sh
apps/backend/shared_i18n/: __init__.py  error_messages.py  utils.py
apps/backend/tests/: test_api_views.py  test_apps_structure.py  (+7 more)
(+339 files in other folders)
